<resources>
    <string name="app_name">Reminder2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="txtLogin">Masuk</string>
    <string name="lblsignask">Belum memiliki akun ? </string>
    <string name="txtUname">Username</string>
    <string name="txtPass">Password</string>
    <string name="txtloginappname">Reminder Apps</string>
    <string name="lblSIGNUP">SIGN UP</string>
    <string name="lblforgotask">Lupa password ? </string>
    <string name="lblRESET">Tanya</string>

    <string name="txtnpm">NPM</string>
    <string name="txtnamalengkap">Nama Lengkap</string>
    <string name="txtemail">Email</string>
    <string name="txtnohp">No Handphone</string>
    <string name="txtSignup">Daftar</string>
    <string name="txtSend">Kirim</string>

    <string name="txtToken">Masukan Kode Anda</string>
    <string name="txtConfirm">Konfirmasi Kode</string>
</resources>
