<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ubun"
    tools:context=".Controller.Regsitrasi.Registrasi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/bell1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:text="@string/txtloginappname" />

        <EditText
            android:id="@+id/npm"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/txtnpm"
            android:inputType="number" />

        <EditText
            android:id="@+id/namalengkap"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            android:hint="@string/txtnamalengkap"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/txtemail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/nohp"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/txtnohp"
            android:inputType="phone" />
        <EditText
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/txtUname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/txtPass"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/txtSignup"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>