<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ubun"
    tools:context=".Controller.Login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgicon"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/bell1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:text="@string/txtloginappname" />

        <EditText
            android:id="@+id/uname"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/txtUname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pass"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/txtPass"
            android:background="@drawable/textview"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/masuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:text="@string/txtLogin"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:autofillHints="@string/lblsignask"
                android:text="@string/lblsignask"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/lblSIGNUP"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:autofillHints="@string/lblforgotask"
                android:text="@string/lblforgotask"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lupa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/lblRESET"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>