<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ubun"
    tools:context=".Controller.ResetPassword.ResetPass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgicon"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/bell1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:text="@string/txtloginappname" />

        <EditText
            android:id="@+id/emailreset"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textview"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/txtemail"
            android:ems="10"

            android:inputType="textPersonName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/txtSend"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>